--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_secure_storage: ^4.2.0
   shared_preferences: ^2.0.6
   qr_code_scanner: ^0.6.1
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
