--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,11 +71,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+     - family: FiraSans
+       fonts:
+         - asset: assets\fonts\FiraSans-Medium.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
